added navigation tabs for gallery and about me

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 </head>
 <body>
     <header>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#about-me">About Me</a>
+                </li>
+                <li>
+                    <a href="#gallery">Gallery</a>
+                </li>
+            </ul>
+        </nav>
         <div class="overlay">
             <h1>Mac & Moore Cabinets</h1>
             <h2>Logan McAnarney</h2>
